scripts/quay-v3.0.4/templates/quay-enterprise-config.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: quay-enterprise
  name: quay-enterprise-config-app
  labels:
    quay-enterprise-component: config-app
spec:
  replicas: 1
  selector:
    matchLabels:
      quay-enterprise-component: config-app
  template:
    metadata:
      namespace: quay-enterprise
      labels:
        quay-enterprise-component: config-app
    spec:
      containers:
      - name: quay-enterprise-config-app
        image: quay.io/redhat/quay:v3.0.4
        ports:
        - containerPort: 8443
        command: ["/quay-registry/quay-entrypoint.sh"]
        args: ["config", "your_secret"]
      imagePullSecrets:
        - name: redhat-quay-pull-secret
