scripts/quay-v3.0.4/templates/quay-enterprise-app-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: quay-enterprise
  namespace: quay-enterprise
spec:
  to:
    kind: Service
    name: quay-enterprise-clusterip
